--- a/project/templates/parts/footer.html
+++ b/project/templates/parts/footer.html
@@ -1,1 +1,47 @@
-<h1>Footer</h1>
+{% load static %}
+
+        <!-- START Template Footer -->
+        <footer role="contentinfo" class="bgcolor-dark pt25">
+            <!-- container -->
+            <div class="container mb25">
+                <!-- row -->
+                <div class="row">
+                    <!-- About Column -->
+                    <div class="col-md-6 text-left">
+                        <h4 class="font-alt mt0">ABOUT</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="page-about.html" class="text-muted">About Us</a></li>
+                            <li><a href="page-contact.html" class="text-muted">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <!-- Quick Links Column -->
+                    <div class="col-md-6 text-left">
+                        <h4 class="font-alt mt0">QUICK LINKS</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="index.html" class="text-muted">Home Page</a></li>
+                            <li><a href="courses.html" class="text-muted">All Courses</a></li>
+                            <li><a href="my-courses.html" class="text-muted">My Courses</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--/ row -->
+            </div>
+            <!--/ container -->
+
+            <!-- bottom footer -->
+            <div class="footer-bottom pt15 pb15 bgcolor-dark bgcolor-dark-darken10">
+                <!-- container -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <!-- copyright -->
+                            <p class="nm text-muted text-center">&copy; Copyright 2024. All Rights Reserved.</p>
+                            <!--/ copyright -->
+                        </div>
+                    </div>
+                </div>
+                <!--/ container -->
+            </div>
+            <!--/ bottom footer -->
+        </footer>
+        <!--/ END Template Footer -->
