--- a/project/templates/pages/page-register.html
+++ b/project/templates/pages/page-register.html
@@ -1,5 +1,7 @@
+{% extends "base.html" %}
 {% load static %}
 
+{% block register %}
 <!-- START Register Content -->
 <section class="section">
     <div class="container">
@@ -81,4 +83,4 @@
 </section>
 <!--/ END Register Content -->
 
-        
+{% endblock register %}
