--- a/project/templates/parts/header.html
+++ b/project/templates/parts/header.html
@@ -93,8 +93,9 @@
                     <li><a href="page-contact.html">Contact Us</a></li>
                 </ul>
             </li>
+            <!-- Make By MAriem Ibrahim  -->
             <li class="dropdown">
-                <a href="{static './page-login.html'}" class="dropdown-toggle dropdown-hover" data-toggle="dropdown"> 
+                <a href="{% url 'login' %}" class="dropdown-toggle dropdown-hover" data-toggle="dropdown"> 
                     <span class="meta">
                         <span class="text">Login</span>
                     </span>
@@ -102,7 +103,7 @@
             </li>
             
             </ul>
-            </div>
+        </div>
         <!--/ END nav collapse -->
         </div>
         <!--/ END Toolbar -->
@@ -110,59 +111,4 @@
 </header>
 <!--/ END Template Header -->
 
-<!-- START Template Main -->
-<section id="main" role="main">
-    <!-- START page header -->
-    <section class="page-header page-header-block nm">
-    <!-- pattern -->
-    <div class="pattern pattern9"></div>
-    <!--/ pattern -->
-    <div class="container pt15 pb15">
-        <div class="page-header-section">
-            <h4 class="title">Page name</h4>
-        </div>
-        <div class="page-header-section">
-            <!-- Toolbar -->
-            <div class="toolbar">
-                <ol class="breadcrumb breadcrumb-transparent nm">
-                    <li><a href="javascript:void(0);">Pages</a></li>
-                    <li class="active">About Us</li>
-                </ol>
-            </div>
-            <!--/ Toolbar -->
-        </div>
-    </div>
-    </section>
-    <div class="clearfix"></div>
-    <!--/ END page header -->
-
-    <!-- START Content Here -->
-
-        <!-- ضيف الشغل بتاعك هنا بين  التعليقين دول 
-      حافظ على التنسيق الى ماشي بيه المشروع اصلا -->
-    <section class="section bgcolor-white">
-    <div class="container">
-    <!-- START Section Header -->
-    <div class="row">
-        <div class="col-md-12">
-            <div class="section-header text-center">
-                <h1 class="section-title font-alt mb25"></h1>
-            </div>
-        </div>
-    </div>
-    <!--/ END Section Header -->
-
-    <!-- carousel -->
-
-    <!--/ carousel -->
-    </div>
-    </section>
-    <!-- ضيف الشغل بتاعك هنا بين  التعليقين دول 
-        حافظ على التنسيق الى ماشي بيه المشروع اصلا -->
-
-    <!-- START To Top Scroller -->
-    <a href="#" class="totop animation" data-toggle="waypoints totop" data-showanim="bounceIn" data-hideanim="bounceOut" data-offset="50%"><i class="ico-angle-up"></i></a>
-    <!--/ END To Top Scroller -->
-</section>
-        <!--/ END Template Main -->
 
