--- a/project/templates/pages/page-register.html
+++ b/project/templates/pages/page-register.html
@@ -3,7 +3,7 @@
 
 {% block register %}
 <!-- START Register Content -->
-<section class="section">
+<section class="section register">
     <div class="container">
         <!-- START Section Header -->
         <div class="row">
