--- a/project/myproject/static/stylesheet/themes/layouts/fixed-header.css
+++ b/project/myproject/static/stylesheet/themes/layouts/fixed-header.css
@@ -5,7 +5,7 @@
  *
  * --------------------------- */
 #header.navbar {
-  position: fixed;
+  position: sticky;
   -webkit-box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(0, 0, 0, 0.03);
           box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(0, 0, 0, 0.03);
 }
