--- a/project/static/stylesheet/layout.css
+++ b/project/static/stylesheet/layout.css
@@ -4,7 +4,7 @@
  *
  * --------------------------- */
 html {
-  position: relative;
+  /* position: relative; */
   z-index: 1;
   min-height: 100%;
   letter-spacing: 0.1px;
@@ -24,6 +24,7 @@ html.frontend body {
 .sidebar-open-ltr {
   overflow: hidden;
 }
+
 /* ----------------------------
  *
  * Template Header
@@ -888,7 +889,6 @@ footer#footer {
  *
  * --------------------------- */
 section.section {
-  padding-top: 80px;
   padding-bottom: 80px;
 }
 section.section .section-title {
