--- a/project/templates/parts/header.html
+++ b/project/templates/parts/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- START Template Header -->
-<header id="header" class="navbar">
+<header id="header" class="navbar" style="position:sticky">
     <div class="container">
         <!-- START navbar header -->
         <div class="navbar-header navbar-header-transparent">
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse navbar-collapse-alt" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
+                <a href="{% url 'home' %}" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
                     <span class="meta">
                         <span class="text">HOME</span>
                         <span class="caret"></span>
@@ -70,7 +70,7 @@
             </ul>
             </li>
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
+            <a href="{% url 'courses' %}" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
                 <span class="meta">
                     <span class="text">COURSES</span>
                     <span class="caret"></span>
@@ -82,7 +82,7 @@
             </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
+                <a href="{% url 'about' %}" class="dropdown-toggle dropdown-hover" data-toggle="dropdown">
                     <span class="meta">
                         <span class="text">ABOUT</span>
                         <span class="caret"></span>
